[package]
name = "exercise-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
hyper-util = { version = "0.1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"